adding the cool SASSy Project

--- a/Web8-SASSSMACSS/sass/app.sass
+++ b/Web8-SASSSMACSS/sass/app.sass
@@ -1,4 +1,10 @@
 @import "variables"
+@import "extends"
+@import "mixins"
 @import "base/base-dir"
 @import "layout/layout-dir"
 @import "modules/modules-dir"
+@import "navbar"
+@import "images"
+
+
