--- a/Web8-SASSSMACSS/sass/_variables.sass
+++ b/Web8-SASSSMACSS/sass/_variables.sass
@@ -16,14 +16,14 @@ $white:                 #fff
 //Fonts
 $font-family-apple:     -apple-system, system-ui, BlinkMacSsystemFont, "Segoe UI"
 $font-family-roboto:    'Roboto Slab', serif
-$font-base:             $font-family-apple
+$font-family-base:      $font-family-apple
 
 $font-base:             1  rem
 $font-large:            1.25 rem
 $font-xlg:              2rem
 
 $font-weight-normal:    normal
-$base-line-height:      1.25rem
+$base-line-height:      1.25
 
 
 //Border
@@ -36,6 +36,10 @@ $btn-main-color:        $base-lighter
 $btn-primary-bg:        $brand-secondary
 $btn-dark-bg:           $base-dark
 $btn-third-bg:          $brand-primary
+
+$btn-border-primary:    $brand-primary
+$btn-border-dark:       $base-dark
+$btn-border-third:      $brand-third
 
 $btn-padding-x:         1rem
 $btn-padding-y:         0.5rem
